Bug 823修改密码时的检验，以及显示

--- a/app/src/main/res/layout/activity_modify_password.xml
+++ b/app/src/main/res/layout/activity_modify_password.xml
@@ -27,6 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorNull"
+            android:textColor="@color/colorText"
             android:imeOptions="actionNext"
             android:lines="1" />
 
@@ -60,6 +61,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorNull"
             android:imeOptions="actionNext"
+            android:textColor="@color/colorText"
             android:lines="1" />
 
     </LinearLayout>
@@ -92,6 +94,7 @@
             android:layout_height="wrap_content"
             android:background="@color/colorNull"
             android:imeOptions="actionNext"
+            android:textColor="@color/colorText"
             android:lines="1" />
     </LinearLayout>
 
