--- a/app/src/main/res/layout/layout_order_details_content.xml
+++ b/app/src/main/res/layout/layout_order_details_content.xml
@@ -7,6 +7,16 @@
              android:elevation="@dimen/dp_8"
              android:orientation="vertical">
 
+    <TextView
+        android:id="@+id/tv_activity_order_details_cycle_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/dp_8"
+        android:textSize="@dimen/sp_16"
+        android:visibility="gone"
+        android:text="订单详情" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -22,6 +32,7 @@
             <RelativeLayout
                 android:id="@+id/rl_layout_order_details_content_order"
                 android:layout_width="match_parent"
+                android:layout_marginTop="@dimen/dp_8"
                 android:layout_height="wrap_content">
 
                 <ImageView
@@ -191,6 +202,42 @@
                     android:layout_alignLeft="@+id/tv_layout_order_details_content_order_remarks_title"
                     android:layout_alignStart="@+id/tv_layout_order_details_content_order_remarks_title"
                     android:layout_below="@+id/tv_layout_order_details_content_order_remarks_title"
+                    android:text=""/>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_layout_order_details_content_caigai"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:visibility="gone">
+
+                <ImageView
+                    android:id="@+id/iv_layout_order_details_caigai"
+                    android:layout_width="@dimen/dp_40"
+                    android:layout_height="@dimen/dp_40"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_margin="@dimen/dp_4"
+                    android:padding="@dimen/dp_4"
+                    android:src="@drawable/ic_order_details_install"/>
+
+                <TextView
+                    android:id="@+id/tv_layout_order_details_content_order_caigai_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignTop="@+id/iv_layout_order_details_caigai"
+                    android:layout_toEndOf="@+id/iv_layout_order_details_caigai"
+                    android:layout_toRightOf="@+id/iv_layout_order_details_caigai"
+                    android:text="拆除"
+                    android:textColor="@color/colorBlueTheme"/>
+
+                <TextView
+                    android:id="@+id/tv_layout_order_details_content_order_caigai_content"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignLeft="@+id/tv_layout_order_details_content_order_caigai_title"
+                    android:layout_alignStart="@+id/tv_layout_order_details_content_order_caigai_title"
+                    android:layout_below="@+id/tv_layout_order_details_content_order_caigai_title"
                     android:text=""/>
             </RelativeLayout>
 
