--- a/app/src/main/res/layout/activity_worker_fragment_content.xml
+++ b/app/src/main/res/layout/activity_worker_fragment_content.xml
@@ -11,6 +11,7 @@
         android:id="@+id/iv_activity_worker_fragment_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@drawable/bg_content_2"
         android:scaleType="fitXY"/>
 
     <LinearLayout
