bug 26拆除不需要编号；至少输入8位imei号文本

--- a/app/src/main/res/layout/item_remove.xml
+++ b/app/src/main/res/layout/item_remove.xml
@@ -6,19 +6,25 @@
              android:layout_height="wrap_content"
              android:background="@drawable/bg_item_installing_blue">
 
-    <TextView
-        android:id="@+id/tv_item_remove_position"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <!--<TextView-->
+    <!--android:id="@+id/tv_item_remove_position"-->
+    <!--android:layout_width="wrap_content"-->
+    <!--android:layout_height="wrap_content"-->
+    <!--android:layout_gravity="bottom|end"-->
+    <!--android:layout_marginBottom="-27sp"-->
+    <!--android:gravity="bottom|center_horizontal"-->
+    <!--android:layout_marginRight="@dimen/dp_12"-->
+    <!--android:layout_marginEnd="@dimen/dp_12"-->
+    <!--android:textColor="@color/colorWhite"-->
+    <!--android:textSize="@dimen/sp_40"-->
+    <!--android:alpha="0.4"-->
+    <!--android:text="1"/>-->
+
+    <ImageView
+        android:layout_width="@dimen/dp_120"
+        android:layout_height="@dimen/dp_64"
         android:layout_gravity="bottom|end"
-        android:layout_marginBottom="-27sp"
-        android:gravity="bottom|center_horizontal"
-        android:layout_marginRight="@dimen/dp_12"
-        android:layout_marginEnd="@dimen/dp_12"
-        android:textColor="@color/colorWhite"
-        android:textSize="@dimen/sp_40"
-        android:alpha="0.4"
-        android:text="1"/>
+        android:src="@drawable/ic_item_car"/>
 
     <ImageView
         android:id="@+id/iv_item_remove_go"
@@ -34,15 +40,15 @@
         android:id="@+id/tv_item_remove_go"
         android:layout_width="wrap_content"
         android:layout_height="@dimen/dp_32"
-        android:gravity="center"
         android:layout_gravity="top|end"
         android:layout_marginEnd="@dimen/dp_16"
         android:layout_marginRight="@dimen/dp_16"
         android:layout_marginTop="@dimen/dp_16"
+        android:gravity="center"
+        android:text="完成"
         android:textColor="@color/colorWhite"
         android:textSize="@dimen/sp_20"
-        android:visibility="gone"
-        android:text="完成"/>
+        android:visibility="gone"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
