--- a/app/src/main/res/layout/view_map_info_window.xml
+++ b/app/src/main/res/layout/view_map_info_window.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@drawable/bg_map_info_window"
-    android:orientation="horizontal"
-    android:padding="@dimen/dp_8">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:background="@drawable/bg_map_info_window"
+              android:maxWidth="@dimen/dp_240"
+              android:orientation="horizontal"
+              android:padding="@dimen/dp_8">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -18,9 +19,10 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:lines="1"
+            android:maxWidth="@dimen/dp_240"
             android:text=""
             android:textColor="@color/colorWhite"
-            android:textSize="@dimen/sp_18" />
+            android:textSize="@dimen/sp_18"/>
 
         <TextView
             android:id="@+id/tv_view_map_info_window_content"
@@ -28,7 +30,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dp_4"
             android:text=""
-            android:textColor="@color/colorWhite" />
+            android:textColor="@color/colorWhite"/>
 
     </LinearLayout>
 
@@ -36,6 +38,6 @@
         android:id="@+id/iv_view_map_info_window_cancel"
         android:layout_width="@dimen/dp_24"
         android:layout_height="@dimen/dp_24"
-        android:src="@drawable/ic_delete" />
+        android:src="@drawable/ic_delete"/>
 
 </LinearLayout>
