--- a/app/src/main/res/layout/activity_pend_details.xml
+++ b/app/src/main/res/layout/activity_pend_details.xml
@@ -10,6 +10,7 @@
         android:id="@+id/iv_activity_pend_details"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_160"
+        android:src="@drawable/bg_order_details_top"
         android:scaleType="fitXY"/>
 
     <include layout="@layout/layout_title_base"/>
