--- a/app/src/main/res/layout/activity_manager_fragment_content.xml
+++ b/app/src/main/res/layout/activity_manager_fragment_content.xml
@@ -10,6 +10,7 @@
         android:id="@+id/iv_activity_manager_fragment_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:src="@drawable/bg_content"
         android:scaleType="fitXY"/>
 
     <LinearLayout
