--- a/app/src/main/res/layout/activity_operate_repair.xml
+++ b/app/src/main/res/layout/activity_operate_repair.xml
@@ -64,6 +64,9 @@
             android:id="@+id/tv_activity_operate_default_device_type_and_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="@dimen/dp_240"
+            android:lines="1"
+            android:ellipsize="end"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/iv_activity_operate_default_car"
             android:layout_toRightOf="@+id/iv_activity_operate_default_car"
