--- a/app/src/main/res/layout/layout_activity_operate_install_head.xml
+++ b/app/src/main/res/layout/layout_activity_operate_install_head.xml
@@ -134,19 +134,23 @@
                 android:layout_toRightOf="@+id/iv_layout_operate_install_frame_no"
                 android:text="@string/frame_no"/>
 
-            <TextView
-                android:id="@+id/tv_layout_operate_install_frame_no"
-                android:layout_width="wrap_content"
+            <EditText
+                android:id="@+id/et_layout_operate_install_frame_no"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_layout_operate_install_frame_no_title"
+                android:layout_alignBottom="@+id/iv_layout_operate_install_frame_no"
                 android:layout_marginEnd="@dimen/dp_80"
                 android:layout_marginRight="@dimen/dp_80"
                 android:layout_marginTop="@dimen/dp_8"
                 android:layout_toEndOf="@+id/iv_layout_operate_install_frame_no"
                 android:layout_toRightOf="@+id/iv_layout_operate_install_frame_no"
+                android:background="@null"
+                android:ellipsize="end"
                 android:lines="1"
                 android:maxWidth="@dimen/dp_240"
-                android:text="asdf"/>
+                android:text="asdf"
+                android:textColor="@color/colorText"
+                android:textSize="@dimen/sp_14"/>
 
         </RelativeLayout>
 
@@ -225,9 +229,9 @@
             android:layout_toEndOf="@+id/iv_layout_operate_install_car_type"
             android:layout_toRightOf="@+id/iv_layout_operate_install_car_type"
             android:background="@null"
+            android:ellipsize="end"
             android:hint="@string/car_type"
             android:lines="1"
-            android:ellipsize="end"
             android:singleLine="true"
             android:textColor="@color/colorText"
             android:textSize="@dimen/sp_14"/>
