--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="MyCheck">
+        <item name="android:button">@drawable/bg_checkbox</item>
+    </style>
 </resources>
