--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,9 +90,10 @@
         style="@style/MyCheck"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/dp_8"
-        android:layout_marginLeft="@dimen/dp_32"
-        android:layout_marginStart="@dimen/dp_32"
+        android:layout_marginTop="@dimen/dp_20"
+        android:paddingLeft="@dimen/dp_8"
+        android:layout_marginLeft="@dimen/dp_24"
+        android:layout_marginStart="@dimen/dp_24"
         android:text="@string/remember_password"/>
 
     <Button
