--- a/app/src/main/res/layout/activity_choice_worker.xml
+++ b/app/src/main/res/layout/activity_choice_worker.xml
@@ -32,15 +32,22 @@
             android:id="@+id/tv_activity_choice_worker_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/dp_16"
+            android:layout_marginStart="@dimen/dp_16"
             android:layout_weight="1"
+            android:ellipsize="end"
             android:gravity="center"
+            android:lines="1"
+            android:maxWidth="@dimen/dp_120"
             android:textColor="@color/colorBlueTheme"/>
 
         <TextView
             android:id="@+id/tv_activity_choice_worker_area"
-            android:layout_width="wrap_content"
+            android:layout_width="@dimen/dp_120"
             android:layout_height="wrap_content"
+            android:ellipsize="end"
             android:gravity="center"
+            android:lines="1"
             android:textColor="@color/colorBlueTheme"/>
 
     </LinearLayout>
@@ -66,11 +73,11 @@
             android:layout_centerVertical="true"
             android:background="@null"
             android:hint="工号/姓名/分管区域"
-            android:paddingLeft="@dimen/dp_8"
-            android:paddingStart="@dimen/dp_8"
-            android:paddingEnd="@dimen/dp_1"
-            android:paddingRight="@dimen/dp_1"
             android:lines="1"
+            android:paddingEnd="@dimen/dp_1"
+            android:paddingLeft="@dimen/dp_8"
+            android:paddingRight="@dimen/dp_1"
+            android:paddingStart="@dimen/dp_8"
             android:textSize="@dimen/sp_16"/>
 
         <ImageView
@@ -111,8 +118,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="end"
             android:checked="true"
-            android:visibility="gone"
-            android:text="支付上门费"/>
+            android:text="支付上门费"
+            android:visibility="gone"/>
 
         <LinearLayout
             android:layout_width="match_parent"
