--- a/app/src/main/res/layout/item_operate_remove.xml
+++ b/app/src/main/res/layout/item_operate_remove.xml
@@ -55,6 +55,8 @@
             android:id="@+id/tv_item_operate_remove_device_type_and_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:lines="1"
+            android:ellipsize="end"
             android:layout_alignTop="@+id/iv_item_operate_remove_device_type"
             android:layout_toEndOf="@+id/iv_item_operate_remove_device_type"
             android:layout_toRightOf="@+id/iv_item_operate_remove_device_type"
