--- a/app/src/main/res/layout/layout_order_details_content.xml
+++ b/app/src/main/res/layout/layout_order_details_content.xml
@@ -96,6 +96,9 @@
                     android:id="@+id/tv_layout_order_details_content_order_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:lines="1"
+                    android:maxWidth="@dimen/dp_200"
+                    android:ellipsize="end"
                     android:layout_alignBottom="@+id/iv_layout_order_details_content_name"
                     android:layout_toEndOf="@+id/iv_layout_order_details_content_name"
                     android:layout_toRightOf="@+id/iv_layout_order_details_content_name"
