OrderDetails owner后不加换行符

--- a/app/src/main/res/layout/item_order.xml
+++ b/app/src/main/res/layout/item_order.xml
@@ -217,6 +217,8 @@
                 android:id="@+id/tv_item_order_phone_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:lines="1"
+                android:ellipsize="end"
                 android:layout_marginTop="@dimen/dp_4"
                 android:text="@string/app_name"/>
 
