--- a/app/src/main/res/layout/item_handing.xml
+++ b/app/src/main/res/layout/item_handing.xml
@@ -195,6 +195,8 @@
                 android:id="@+id/tv_item_handing_phone_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:lines="1"
+                android:ellipsize="end"
                 android:layout_marginTop="@dimen/dp_4"
                 android:text="@string/app_name"/>
 
