--- a/app/src/main/res/layout/item_pended.xml
+++ b/app/src/main/res/layout/item_pended.xml
@@ -118,6 +118,8 @@
                 android:id="@+id/tv_item_pended_contact"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:lines="1"
+                android:ellipsize="end"
                 android:layout_marginTop="@dimen/dp_4"
                 android:text="姓名"/>
 
