新的UI做完部分

--- a/app/src/main/res/layout/layout_order_details_content.xml
+++ b/app/src/main/res/layout/layout_order_details_content.xml
@@ -205,6 +205,7 @@
                     android:layout_alignLeft="@+id/tv_layout_order_details_content_order_remarks_title"
                     android:layout_alignStart="@+id/tv_layout_order_details_content_order_remarks_title"
                     android:layout_below="@+id/tv_layout_order_details_content_order_remarks_title"
+                    android:textIsSelectable="true"
                     android:text=""/>
             </RelativeLayout>
 
@@ -312,6 +313,7 @@
                     android:layout_alignLeft="@+id/tv_layout_order_details_content_remove_title"
                     android:layout_alignStart="@+id/tv_layout_order_details_content_remove_title"
                     android:layout_below="@+id/tv_layout_order_details_content_remove_title"
+                    android:textIsSelectable="true"
                     android:text=""/>
             </RelativeLayout>
 
@@ -347,6 +349,7 @@
                     android:layout_alignLeft="@+id/tv_layout_order_details_content_order_info_title"
                     android:layout_alignStart="@+id/tv_layout_order_details_content_order_info_title"
                     android:layout_below="@+id/tv_layout_order_details_content_order_info_title"
+                    android:textIsSelectable="true"
                     android:text=""/>
             </RelativeLayout>
 
