--- a/app/src/main/res/layout/dialog_modify_reason.xml
+++ b/app/src/main/res/layout/dialog_modify_reason.xml
@@ -11,17 +11,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center_horizontal"
             android:orientation="horizontal"
             >
 
-            <ImageView
-                android:id="@+id/iv_dialog_modify_title"
-                android:layout_width="@dimen/dp_40"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="@dimen/dp_40"
-                android:layout_gravity="center_horizontal"
-                android:padding="@dimen/dp_8"
-                android:src="@drawable/ic_clock"/>
+                android:layout_gravity="center"
+                android:layout_marginLeft="@dimen/dp_8"
+                android:gravity="center"
+                android:text="改约时间："/>
+
 
             <TextView
                 android:id="@+id/tv_dialog_modify_title"
@@ -29,23 +29,31 @@
                 android:layout_height="@dimen/dp_40"
                 android:layout_gravity="center"
                 android:gravity="center"
-                android:text="请选择改约时间"/>
+                android:textColor="@color/colorGray"
+                android:text="请选择时间"/>
 
+            <ImageView
+                android:id="@+id/iv_dialog_modify_title"
+                android:layout_width="@dimen/dp_40"
+                android:layout_height="@dimen/dp_40"
+                android:layout_gravity="center_horizontal"
+                android:padding="@dimen/dp_8"
+                android:src="@drawable/ic_date"/>
 
         </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_dialog_modify_reason_cancel"
+        <ImageView
+            android:id="@+id/iv_dialog_modify_reason_cancel"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/dp_40"
+            android:layout_height="@dimen/dp_32"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_alignParentTop="true"
-            android:layout_marginEnd="@dimen/dp_8"
-            android:layout_marginRight="@dimen/dp_8"
-            android:gravity="center"
-            android:text="@string/cancel"
-            android:textColor="@color/colorBlueTheme"/>
+            android:layout_marginEnd="@dimen/dp_4"
+            android:layout_marginRight="@dimen/dp_4"
+            android:padding="@dimen/dp_8"
+            android:src="@drawable/ic_delete_gray"
+            android:gravity="center"/>
     </RelativeLayout>
 
     <EditText
@@ -54,7 +62,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/dp_8"
         android:background="@drawable/bg_edit"
-        android:hint="填写改约原因..."
+        android:hint="填写改约原因（必填）"
+        android:textColorHint="@color/colorGray"
         android:textSize="@dimen/sp_14"
         android:gravity="start"
         android:minHeight="@dimen/dp_120"/>
